tests/baselines/reference/parserCommaInTypeMemberList2.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserCommaInTypeMemberList2.ts(1,38): error TS1165: A destructuring declaration must have an initializer.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserCommaInTypeMemberList2.ts(1,70): error TS1005: ',' expected.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserCommaInTypeMemberList2.ts(1,71): error TS1134: Variable declaration expected.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserCommaInTypeMemberList2.ts(1,9): error TS2304: Cannot find name '$'.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserCommaInTypeMemberList2.ts (4 errors) ====
    var s = $.extend< { workItem: any }, { workItem: any, width: string }>({ workItem: this._workItem }, {});
                                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1165: A destructuring declaration must have an initializer.
                                                                         ~
!!! error TS1005: ',' expected.
                                                                          ~
!!! error TS1134: Variable declaration expected.
            ~
!!! error TS2304: Cannot find name '$'.
    